--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <picture>
           <source srcset="/images/image-product-mobile.jpg" media="(max-width: 375px)">
           <source srcset="/images/image-product-desktop.jpg">
-          <img src="/images/image-product-desktop.jpg" alt="Flowers">
+          <img src="/images/image-product-desktop.jpg" alt="Product">
         </picture>
 
         <!-- <img src="" alt="Perfume"> -->
