--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="feature">
       <div class="feature-inner">
         <picture>
-          <source srcset="https://raw.githubusercontent.com/SCI-COPATH/product-preview-card-component/master/images/image-product-mobile.jpg" media="(max-width: 375px)">
-          <source srcset="https://raw.githubusercontent.com/SCI-COPATH/product-preview-card-component/master/images/image-product-desktop.jpg">
-          <img src="https://raw.githubusercontent.com/SCI-COPATH/product-preview-card-component/master/images/image-product-desktop.jpg" alt="Flowers">
+          <source srcset="./images/image-product-desktop.jpg" media="(max-width: 375px)">
+          <source srcset="./images/image-product-desktop.jpg">
+          <img src="./images/image-product-desktop.jpg" alt="Flowers">
         </picture>
 
         <!-- <img src="" alt="Perfume"> -->
