--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="feature">
       <div class="feature-inner">
         <picture>
-          <source srcset="./images/image-product-desktop.jpg" media="(max-width: 375px)">
+          <source srcset="./images/image-product-mobile.jpg" media="(max-width: 375px)">
           <source srcset="./images/image-product-desktop.jpg">
-          <img src="./images/image-product-desktop.jpg" alt="Flowers">
+          <img src="./images/image-product-desktop.jpg" alt="Perfume">
         </picture>
 
         <!-- <img src="" alt="Perfume"> -->
